scrollbar fix in dependency chart

--- a/src/styles/DependencyChart.scss
+++ b/src/styles/DependencyChart.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   padding: 15px;
   width: 80%;
-  overflow: scroll;
+  overflow: auto;
 
   .headerCell {
     color: #1c2426;
